Inserindo Ordens de Servico

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Gestão de Clientes</h1>
+        <h1>Sistema de Ordens de Serviço</h1>
         <nav>
             <a href="/">Home</a> | 
             <a href="/clientes">Clientes</a> | 
             <a href="/clientes/novo">Novo Cliente</a>
+            <a href="/ordens_de_servico">Listar Ordens de Serviço</a>
+            <a href="/criar_ordem_de_servico">Criar Nova Ordem de Serviço</a>
         </nav>
     </header>
     <main>
